# LightweightToolset

./: .gitignore  README.md  free.html  index.html  package-lock.json  package.json  popup.html  vite.config.ts
src/: App.css  App.tsx  free.css  free.tsx  popup.css  popup.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_usage.rs  clipboard.rs  input_monitor.rs  key_usage.rs  lib.rs  main.rs  settings.rs  timer.rs  tools.rs  window_pinner.rs  window_service.rs  windows_notification.rs
